[package]
name = "ansistr"
description = "Command-line string manipulation helpers."
license = "MIT"
version = "0.1.0"
authors = ["Kristijan Sedlak <xpepermint@gmail.com>"]
edition = "2018"
documentation = "https://github.com/xpepermint/ansistr"
homepage = "https://github.com/xpepermint/ansistr"
repository = "https://github.com/xpepermint/ansistr"

[dependencies]
regex = "1.3.6"
unicode-width = "0.1.7"
